--- a/prog_datasci_2_python_entrega.ipynb
+++ b/prog_datasci_2_python_entrega.ipynb
@@ -279,12 +279,14 @@
     "- Incorrecto: El último elemento de la tupla \"planetas\", 'Tierra' no está separado del anterior, 'Júpiter'. De este modo, se está definiendo un vector de tan sólo dos elementos, 'Saturno' y 'JupiterTierra', ya que el intérprete Python ignora los espacios que no se encuentren entre comillas. Sería necesario añadir una coma (,) en su lugar.\n",
     "- Correcto\n",
     "- Correcto\n",
-    "- "
+    "- Correcto, aunque la instrucción no define necesariamente una matriz (ya que aún no se han especificado sus elementos), si no un array unidimensional de elementos '[]'.\n",
+    "\n",
+    "Mostramos por pantalla las expresiones anteriores por tal de validar contenidos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +296,8 @@
       "('Saturno', 'JupiterTierra')\n",
       "('123', 'abc')\n",
       "['Lunes', 'Martes', 'Miercoles', 'Jueves']\n",
-      "[[], [], []]\n"
+      "[[], [], []]\n",
+      "[]\n"
      ]
     }
    ],
@@ -304,10 +307,13 @@
     "dias = ['Lunes', 'Martes', \"Miercoles\", ''.join(['J','u','e','v','e','s'])]\n",
     "matriz = [[],[],[]]\n",
     "\n",
-    "print planetas\n",
-    "print t\n",
-    "print dias\n",
-    "print matriz\n"
+    "print (planetas)\n",
+    "print (t)\n",
+    "print (dias)\n",
+    "#Mostramos por pantalla el contenido de 'matriz'\n",
+    "print (matriz)\n",
+    "#Mostramos el segundo elemento de 'matriz', tratandólo como una lista\n",
+    "print (matriz[1])\n"
    ]
   },
   {
@@ -325,7 +331,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El término \"batteries included\" hace referencia a la librería estándar de Python, la cual incluye multitud de paquetes..."
+    "El término \"batteries included\" hace referencia a la librería estándar de Python (stdlib), la cual incluye multitud de paquetes con utilidades robustas, que permiten un desarrollo inmediato de multitud de aplicaciones sin necesidad de descargar paquetes adicionales. Algunos de los paquetes más interesantes son:\n",
+    "- Módulo de interacción con el Sistema Operativo: el paquete 'os' contiene multitud de funciones que permiten interactuar con el sistema operativo base como consulta y modificación de variables de entorno, paths, usuarios, grupos, parámetros de procesos, etc.\n",
+    "- Argumentos de línea de comando: el módulo 'sys' proporciona acceso a algunas variables utilizadas o mantenidas por el intérprete: flags, configuración de floats (precisión y representación interna), límite de recursividad, redirección de mensajes de error, etc.\n",
+    "- Matemáticas: el módulo 'math' da acceso a una librería C con multitud de funciones matemáticas implementadas, tales como constantes, métricas estadísticas (variancia, media, distribuciones, etc), generadores de valores, entre muchos otros.\n",
+    "- Compresión de datos: diversos módulos como 'zlib', 'gzip', 'bz2', 'lzma' o 'zipfile' proporcionan distintos métodos de archivado y compresión de ficheros.\n",
+    "Otros módulos notables gestionan el uso de fechas y horas ('datetime'), el acceso a internet ('urllib', 'smtplib') o el control de calidad ('unitest','doctest')."
    ]
   },
   {
@@ -343,7 +354,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Respuesta"
+    "El idiom \"List comprehensions\" proporciona una sintexis alternativa para la creación de listas donde cada elemento de la misma es el resultado de ciertas operaciones aplicadas a otra secuencia o iterable.\n",
+    "Por ejemplo, dada una lista de valores enteros, podemos crear una nueva lista aplicando alguna operación matemática a los elementos de la primera:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-27, -1, 1, 27]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Definimos una lista de enteros cualquiera\n",
+    "lista_num = [-3, -1, 1, 3]\n",
+    "#Definimos una nueva lista a partir de los elementos de la anterior, elevandolos al cubo y \n",
+    "#la mostramos por pantalla\n",
+    "lista_num_cubo = [x**3 for x in lista_num]\n",
+    "print (lista_num_cubo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "También podemos utilizar declaraciones más complejas, como **for** o **if** y tratar contenidos de varias listas o diccionarios. Por ejemplo, podemos analizar los pares clave-valor de un diccionario, aplicar alguna condición a los mismos y guardar en una lista el resultado de dicha condición (es decir, qué elementos la cumplen y cuáles no):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['escorial_25', 'valencia_52']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Definimos un diccionario con pares clave-valor de tipo dirección-precio_alquiler\n",
+    "alquileres = dict(muntaner_289=1200, valencia_52=950, diagonal_440=1600, escorial_25=900)\n",
+    "#Definimos una lista conteniendo las claves de los pisos con valor (alquiler) menor a 1000\n",
+    "#y la mostramos por pantalla\n",
+    "alquileres_economicos = [k for k,v in sorted(alquileres.items()) if v <1000]\n",
+    "print (alquileres_economicos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otro posible uso sería la extracción de ciertas partes o cadenas de texto de un string. Para ello, definimos una función con el comportamiento deseado, hacieno uso de sintaxis \"list comprehension\". Por defecto, al aplicar la función, cada caracter se convierte en un elemento de la lista. Para una visualización correcta, se hace uso de la función \"join\", que agrupa los carácteres."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['L', 's', ' ', 'r', 's', 'l', 't', 'd', 's', ' ', 'm', 's', 't', 'r', 'n', ' ', 'n', ' ', 'c', 'r', 'c', 'm', 'n', 't', ' ', 'd', 'l', ' ', '3', '%', ' ', 'd', 'r', 'n', 't', ' ', 'l', ' ', 'p', 'r', 'm', 'r', ' ', 's', 'm', 's', 't', 'r', ' ', 'd', ' ', '2', '0', '1', '7', '.']\n",
+      "Ls rsltds mstrn n crcmnt dl 3% drnt l prmr smstr d 2017.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Definimos una cadena de texto\n",
+    "texto = 'Los resultados muestran un crecimiento del 3% durante el primer semestre de 2017.'\n",
+    "#Definimos una función mediante list comprehension\n",
+    "def excluir_vocales(x):\n",
+    "    return [x for x in texto if x not in 'aeiou']\n",
+    "#Aplicamos la función a la cadena de texto y la mostramos por pantalla\n",
+    "print (excluir_vocales(texto))\n",
+    "#Alternativa legible: aplicamos la función a la cadena de texto, la agrupamos mediante \"join\" y la mostramos por pantalla\n",
+    "print (\"\".join(excluir_vocales(texto)))\n"
    ]
   },
   {
@@ -413,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "9852.03456165759\n"
      ]
     }
    ],
@@ -428,7 +524,7 @@
     "#Importamos las librerias random y math\n",
     "import random, math\n",
     "#Definimos el radio del circulo como un valor entero aleatorio entre 0 y 100\n",
-    "radio = random.randint(0,100)\n",
+    "radio = random.randint(1,100)\n",
     "#Calculamos el area del circulo utilizando la constante pi de la libreria math\n",
     "area_circulo = math.pi*radio**2\n",
     "#Mostramos por pantalla el valor del area calculado\n",
@@ -448,23 +544,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-2b7ad4678ecc>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-2b7ad4678ecc>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print ()\"dict['Barcelona']\", dict['Barcelona'])\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prefijos['Barcelona']:  93\n"
      ]
     }
    ],
    "source": [
-    "# Respuesta\n",
-    "prefijos = {'Barcelona': 93, 'Madrid': 91, 'Galicia': 988}\n",
-    "print ()\"dict['Barcelona']\", dict['Barcelona'])"
+    "#Definimos un diccionario con pares clave-valor de ciudad y prefijo\n",
+    "prefijos = {'Barcelona': 93, 'Madrid': 91, 'A Coruña': 981, 'Alicante' : 96}\n",
+    "#Adicionalmente, mostramos por pantalla el valor asociado con la clave \"Barcelona\"\n",
+    "print (\"prefijos['Barcelona']: \", prefijos['Barcelona'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
