--- a/prog_datasci_2_python_entrega.ipynb
+++ b/prog_datasci_2_python_entrega.ipynb
@@ -434,7 +434,7 @@
     "#Definimos una cadena de texto\n",
     "texto = 'Los resultados muestran un crecimiento del 3% durante el primer semestre de 2017.'\n",
     "#Definimos una función mediante list comprehension\n",
-    "def Excluir_vocales(x):\n",
+    "def excluir_vocales(x):\n",
     "    return [x for x in texto if x not in 'aeiou']\n",
     "#Aplicamos la función a la cadena de texto y la mostramos por pantalla\n",
     "print (excluir_vocales(texto))\n",
