--- a/prog_datasci_2_python_entrega.ipynb
+++ b/prog_datasci_2_python_entrega.ipynb
@@ -57,6 +57,7 @@
     }
    ],
    "source": [
+    "#Definimos un string con comillas simples y lo mostramos por pantalla\n",
     "texto_1 = 'Mi libro favorito se titula \"El retrato de Dorian Gray\".'\n",
     "print texto_1"
    ]
@@ -83,6 +84,8 @@
     }
    ],
    "source": [
+    "#Definimos un texto con comillas dobles que a su vez contiene una cita entrecomillada \n",
+    "#y lo mostramos por pantalla\n",
     "texto_2 = \"Mi libro favorito se titula \"El retrato de Dorian Gray\".\"\n",
     "print texto_2"
    ]
@@ -112,6 +115,8 @@
     }
    ],
    "source": [
+    "#Definimos un string con comillas triples, varios saltos de linea y lo mostramos\n",
+    "#por pantalla\n",
     "texto_3 = \"\"\"Gama colores fríos:\n",
     "- Azul\n",
     "- Gris\n",
@@ -141,6 +146,8 @@
     }
    ],
    "source": [
+    "#Definimos un string con comillas dobles, varios saltos de linea y lo mostramos\n",
+    "#por pantalla\n",
     "texto_4 = \"Gama colores fríos:\n",
     "- Azul\n",
     "- Gris\n",
@@ -172,6 +179,8 @@
     }
    ],
    "source": [
+    "#Definimos un string con comillas triples, varias expresiones de salto de linea\n",
+    "#y lo mostramos por pantalla\n",
     "texto_5 = \"Gama colores fríos: \\n - Azul \\n - Gris \\n - Violeta\"\n",
     "print texto_5"
    ]
@@ -251,6 +260,8 @@
     }
    ],
    "source": [
+    "#Realizamos una serie de operaciones matematicas y mostramos el resultado final\n",
+    "#por pantalla\n",
     "a=3*2\n",
     "b=9/2.\n",
     "c, a = a+1, b*2\n",
@@ -276,8 +287,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Incorrecto: El último elemento de la tupla \"planetas\", 'Tierra' no está separado del anterior, 'Júpiter'. De este modo, se está definiendo un vector de tan sólo dos elementos, 'Saturno' y 'JupiterTierra', ya que el intérprete Python ignora los espacios que no se encuentren entre comillas. Sería necesario añadir una coma (,) en su lugar.\n",
-    "- Correcto\n",
+    "- Incorrecto: el último elemento de la tupla \"planetas\", 'Tierra' no está separado del anterior, 'Júpiter'. De este modo, se está definiendo un vector de tan sólo dos elementos, 'Saturno' y 'JupiterTierra', ya que el intérprete Python ignora los espacios que no se encuentren entre comillas. Sería necesario añadir una coma (,) en su lugar.\n",
+    "- Correcto: sin embargo, al tratarse de una tupla, se puede declarar el entero sin comillas.\n",
     "- Correcto\n",
     "- Correcto, aunque la instrucción no define necesariamente una matriz (ya que aún no se han especificado sus elementos), si no un array unidimensional de elementos '[]'.\n",
     "\n",
@@ -286,25 +297,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Saturno', 'JupiterTierra')\n",
-      "('123', 'abc')\n",
-      "['Lunes', 'Martes', 'Miercoles', 'Jueves']\n",
-      "[[], [], []]\n",
-      "[]\n"
+     "ename": "NameError",
+     "evalue": "name 'abc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-----------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-b7fe5426502f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Definimos dos listas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mplanetas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'Saturno'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Jupiter'\u001b[0m \u001b[0;34m'Tierra'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m123\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mabc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdias\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Lunes'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Martes'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Miercoles\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'J'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'u'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'e'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'v'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'e'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m's'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmatriz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'abc' is not defined"
      ]
     }
    ],
    "source": [
+    "#Definimos una lista de strings\n",
     "planetas = ('Saturno', 'Jupiter' 'Tierra')\n",
-    "t = '123','abc'\n",
+    "#Definimos una tupla de strings\n",
+    "t = 123,'abc'\n",
+    "#Definimos una lista de strings\n",
     "dias = ['Lunes', 'Martes', \"Miercoles\", ''.join(['J','u','e','v','e','s'])]\n",
+    "#Definimos un array vacío\n",
     "matriz = [[],[],[]]\n",
     "\n",
     "print (planetas)\n",
@@ -434,7 +449,7 @@
     "#Definimos una cadena de texto\n",
     "texto = 'Los resultados muestran un crecimiento del 3% durante el primer semestre de 2017.'\n",
     "#Definimos una función mediante list comprehension\n",
-    "def excluir_vocales(x):\n",
+    "def Excluir_vocales(x):\n",
     "    return [x for x in texto if x not in 'aeiou']\n",
     "#Aplicamos la función a la cadena de texto y la mostramos por pantalla\n",
     "print (excluir_vocales(texto))\n",
